--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     type: com.alibaba.druid.pool.DruidDataSource
     url: jdbc:oracle:thin:@127.0.0.1:1521:ORCL
-    username: scshyy
-    password: scshyy
+    username: root
+    password: 123
     initialSize: 5
     minIdle: 5
     maxActive: 20
